# CoVAPSy

./: .gitattributes  .gitignore  README.md  UV_USAGE.md  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml
Asservissement/Asserv2/: Asserv2.ino  I2Cslave.cpp  I2Cslave.hpp  VoltageReader.hpp
I2C/: sender.py
I2C/testI2C_slave/: testI2C_slave.ino
Simulateur/: CNN1DResNetExtractor.py  TemporalResNetExtractor.py  config.py  launch_train_multiprocessing.py  onnx_utils.py
Simulateur/controllers/controllerVehicleDriver/: controllerVehicleDriver.py
Simulateur/controllers/controllerWorldSupervisor/: checkpointmanager.py  controllerWorldSupervisor.py
Simulateur/controllers/controller_violet/: controller_violet.py
Simulateur/worlds/: .piste0.wbproj  .piste1.wbproj  .train_track_2023.wbproj  piste1.wbt
animation/: README.MD
docs/: Camera.md  Deroulement_course.md  IA.md  Lidar.md  Mannette.md  Simulateur.md  UV_USAGE.md  building_docs.md  index.md  requirments.txt
docs/elec/Hat/: Hat.kicad_pcb  Hat.kicad_prl  Hat.kicad_pro  Hat.kicad_sch  Hat.kicad_sch-bak  fp-info-cache  sym-lib-table
docs/elec/Interface/: Interface.kicad_prl  Interface.kicad_pro  Interface.kicad_sch
docs/elec/mezzanine/: mezzanine.kicad_prl  mezzanine.kicad_pro
scripts/: Live_display_lidar.py  Onetime_lidar.py  Simple.py  ToF.py  commande_PS4.py  masterI2C.py  sender.py  setup.sh  startup.sh  tune_pwm_propulsion.py
src/HL/: Autotech_constant.py  Camera copy.py  Camera.py  Car.py  Driver.py  Lidar.py  README.md  ToF.py  __init__.py  driving.py  get_ip.py  main.py
src/HL/Vision/: Analyse.py  Analyse_Image.py  Cam.py  Cam_copy.py  Camera.py  Imagestream copy.py  Imagestream.py
src/LL/Asserv2/: Asserv2.ino  (+2 more)
src/Simulateur/: DynamicActionPlotCallback.py  TemporalResNetExtractor.py  launch_train_multiprocessing.py  onnx_utils.py
src/VisionCamera/: ReadMe.md
(+9 files in other folders)
