[project]
name = "covapsy"
version = "0.1.0"
description = "CoVAPSy - Autonomous Racing Car Project"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Association INTech", email = "contact@association-intech.fr" }
]

dependencies = [
    # Core scientific computing and data processing
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    
    # Computer vision and image processing
    "opencv-python>=4.5.0",
    "Pillow>=8.3.0",
    
    # Machine learning and AI
    "onnxruntime>=1.8.0",
    "torch>=1.9.0",
    "stable-baselines3>=1.6.0",
    
    # Network interface management
    "netifaces2>=0.0.19",
    
    # PS4 controller support
    "pyPS4Controller>=1.2.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-mermaid2-plugin>=0.6.0",
    "mkdocs-git-revision-date-localized-plugin>=1.1.0",
    "mkdocs-git-authors-plugin>=0.6.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
rpi = [
    # Note: picamera2 causes UV to auto-include rpi extras even when not requested
    # This is likely a UV bug. Add back when needed:
    # "picamera2>=0.3.0",
    
    # Raspberry Pi specific hardware control
    "rpi-hardware-pwm>=0.1.0",
    "RPi.GPIO>=0.7.1",
    "gpiozero>=1.6.0",
    
    # I2C and SPI communication (Linux specific)
    "smbus2>=0.4.0",
    "spidev>=3.5",
    
    # OLED display support
    "luma.oled>=3.8.0",
    "luma.core>=2.3.0",
    "Adafruit-SSD1306>=1.6.0",
    
    # Time-of-Flight sensor support
    "adafruit-circuitpython-vl53l0x>=3.6.0",
    "adafruit-blinka>=8.0.0",
]

[project.scripts]
covapsy-main = "src.HL.main:main"
covapsy-lidar-test = "scripts.Simple:main"

[tool.uv]
dev-dependencies = []
